<resources>
    <string name="app_name">Grab Fake</string>

    <string name="auth_failed">Authentication Failed!</string>
    <string name="action_loading">Loading</string>

    <string name="forgot_password"><u><b>Forgot Password?</b></u></string>

    <string name="password">Password</string>
    <string name="login">Login</string>


    <string name="register">Register</string>
    <string name="confim_password">Confirm password</string>
    <string name="username_or_email">Email</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_google">Login with Google      </string>
    <string name="term_policy"><u><b>Terms and Privacy Policy</b></u></string>
    <string name="title_activity_customer_maps">Map</string>
    <string name="title_activity_waiting_driver">Map</string>
    <string name="title_activity_show_route">Map</string>
    <string name="title_activity_update_map_realtime">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grab Fake</string>
    <string name="nav_header_subtitle">grabfake@support.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_map">Map</string>

</resources>
