<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical">

    <EditText
        android:id="@+id/edLoginUsername"
        style="@style/text_default_style"
        android:lines="1"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/username_or_email"
        android:drawableStart="@drawable/icon_user"
        android:drawableEnd="@drawable/icon_alert"
        android:layout_weight="1"
        />
    <EditText
        android:id="@+id/edLoginPassword"
        style="@style/text_default_style"
        android:lines="1"
        android:maxLines="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/icon_password"
        android:drawableEnd="@drawable/icon_alert"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btnLogin"
        style="@style/text_default_style"
        android:text="@string/login"
        android:background="@color/yellow"
        android:textStyle="bold"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/text_default_style"
        android:text="@string/forgot_password"
        android:textColor="@color/text_link"
        android:gravity="center"
        android:layout_weight="1"
        />

    <RelativeLayout
        android:id="@+id/relLoginWithFacebook"
        style="@style/text_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/tvFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/login_with_fb"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/size_icon_inside_button"
            android:layout_height="@dimen/size_icon_inside_button"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_facebook"  />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLoginWithGoogle"
        style="@style/text_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/red_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/login_with_google"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/size_icon_inside_button"
            android:layout_height="@dimen/size_icon_inside_button"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@drawable/icon_google" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvTermPolicy"
        style="@style/text_default_style"
        android:text="@string/term_policy"
        android:textColor="@color/text_link"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_weight="1"
        />
</LinearLayout>